post and project entry, updated nav bar

--- a/main.html
+++ b/main.html
@@ -8,14 +8,27 @@
     </head>
 
     <body class="landing-page">
-        <h1>Database Manager</h1>
+        <a href="main.html"><h1>Database Manager</h1></a>
 
-        <nav>
-            <ul>
-                <li><a href="entry.html">Enter Data</a></li>
-                <li><a href="">Query Posts</a></li>
-                <li><a href="">Query Projects</a></li>
-            </ul>
-        </nav>
+        <ul>
+            <li class="dropdown">
+                <a href="" class="dropbtn">Data Entry</a>
+                <div class="dropdown-content">
+                    <a href="add_user.html">Add User</a>
+                    <a href="add_project.html">Add Project</a>
+                    <a href="add_post.html">Add Post</a>
+                    <a href="add_ptp.html">Add Post to Project</a>
+                    <a href="add_result.html">Add Result</a>
+                </div>
+            </li>
+            <li class="dropdown">
+                <a href="" class="dropbtn">Data Query</a>
+                <div class="dropdown-content">
+                    <a href="query_posts.html">Query Posts</a>
+                    <a href="query_projects.html">Query Projects</a>
+                </div>
+            </li>
+        </ul>
+
     </body>
 </html>
